fix some alignment issue and implement mailer

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -7,6 +7,10 @@
     font-family: sans-serif;
 }
 
+.overflow-x {
+    overflow-x: auto !important;
+}
+
 
 .login_input_f, .signup_input_f{
     width: 100%;
